# LibtorchEmbedding

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CBOW/: CMakeLists.txt  build.sh
CBOW/include/: cbow.hpp  lib.hpp
CBOW/src/: class.cpp  main.cpp
Embedding/include/: embed_base.hpp  embedding.hpp
Embedding/src/: class.cpp
